# SIPring

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
docker/: Dockerfile  docker-compose.yml
docs/: DESIGN_SYSTEM.md
sipring/: __init__.py  config.py  main.py  models.py  ring_manager.py  storage.py
sipring/api/: __init__.py  config.py  events.py  ring.py
sipring/sip/: __init__.py  auth.py  client.py  messages.py
sipring/static/css/: main.css
sipring/static/js/: main.js
sipring/templates/: about.html  base.html  config_detail.html  config_form.html  dashboard.html  events.html
tests/: __init__.py  test_api.py  test_messages.py  test_models.py  test_storage.py
